# comau-experimental

./: README.md
PDL_programs/: README.md
PDL_programs/Single_Arm/: ROS_COMAU_motion.pdl  ROS_COMAU_motion_feedback.pdl  ROS_COMAU_robot_status.pdl  ROS_COMAU_tcp_utils.pdl  ROS_COMAU_trajectory.pdl
comau/: CMakeLists.txt  README.md  package.xml
comau_driver/: CMakeLists.txt  README.md  package.xml
comau_driver/comau_joint_streamer/: CMakeLists.txt  README.md
comau_driver/comau_joint_streamer/include/comau_driver/comau_joint_streamer/: comau_joint_trajectory_streamer.h
comau_driver/comau_joint_streamer/src/: comau_joint_streamer_node.cpp  comau_joint_streamer_node_advanced.cpp
comau_driver/comau_joint_streamer/src/comau_joint_streamer/: comau_joint_trajectory_streamer.cpp
comau_driver/comau_joint_trajectory_action/: CMakeLists.txt  README.md
comau_driver/comau_joint_trajectory_action/include/comau_driver/comau_joint_trajectory_action/: comau_joint_trajectory_action.h
comau_driver/comau_joint_trajectory_action/src/: comau_joint_trajectory_action_node.cpp
comau_driver/comau_joint_trajectory_action/src/comau_joint_trajectory_action/: comau_joint_trajectory_action.cpp
comau_driver/comau_motion_feedback/: CMakeLists.txt  README.md
comau_driver/comau_motion_feedback/include/comau_driver/comau_motion_feedback/: cartesian_data.h  motion_feedback_comau.h  motion_feedback_comau_interface.h  motion_feedback_comau_message.h  motion_feedback_comau_relay_handler.h
comau_driver/comau_motion_feedback/src/: motion_feedback_node.cpp
comau_driver/comau_motion_feedback/src/comau_motion_feedback/: cartesian_data.cpp  motion_feedback_comau.cpp  motion_feedback_comau_interface.cpp  motion_feedback_comau_message.cpp  motion_feedback_comau_relay_handler.cpp
comau_driver/comau_robot_status/: CMakeLists.txt  CMakeLists.txt~  README.md
comau_driver/comau_robot_status/include/comau_driver/comau_robot_status/: robot_status_comau.h  robot_status_node.h
comau_driver/comau_robot_status/src/: robot_status_node.cpp
comau_driver/comau_trajectory/: CMakeLists.txt  README.md
comau_driver/comau_trajectory/include/comau_driver/comau_trajectory/: comau_joint_trajectory_interface.h  joint_traj_pt_comau.h  joint_traj_pt_comau_message.h
comau_driver/comau_trajectory/src/comau_trajectory/: comau_joint_trajectory_interface.cpp  joint_traj_pt_comau.cpp  joint_traj_pt_comau_message.cpp
comau_driver/launch/: comau_driver.launch
comau_driver/test/: CMakeLists.txt  action_client_trj_test.cpp  comau_action_client_trj_test.cpp  example_trj.yaml  standard_action_client_trj_test.cpp
comau_msgs/: CMakeLists.txt  README.md  package.xml
comau_msgs/action/: ComauJointTrajectory.action
comau_msgs/include/comau_msgs/: comau_simple_message.h
comau_msgs/msg/: JointTrajComau.msg  JointTrajPointComau.msg  MotionFeedbackComau.msg
comau_msgs/srv/: CmdJointTrjComau.srv
comau_robots/: README.md
comau_robots/comau_nj220foundry/: README.md
comau_robots/comau_nj220foundry/comau_nj220foundry_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
comau_robots/comau_nj220foundry/comau_nj220foundry_moveit_plugin/: CMakeLists.txt  comau_nj220foundry_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
comau_robots/comau_nj220foundry/comau_nj220foundry_support/: CMakeLists.txt  package.xml
comau_robots/comau_nj220foundry/comau_nj220foundry_support/config/: joint_names_comau_nj220foundry.yaml
comau_robots/comau_nj220foundry/comau_nj220foundry_support/launch/: comau_nj220foundry_description.launch  comau_nj220foundry_driver.launch  comau_nj220foundry_driver_and_rviz.launch
comau_robots/comau_nj220foundry/comau_nj220foundry_support/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
comau_robots/comau_nj220foundry/comau_nj220foundry_support/urdf/: comau_nj220foundry.urdf  comau_nj220foundry.xacro  comau_nj220foundry_no_paralelogram_macro.xacro
comau_robots/comau_ns16arc/: README.md
comau_robots/comau_ns16arc/comau_ns16arc_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
comau_robots/comau_ns16arc/comau_ns16arc_moveit_plugin/: CMakeLists.txt  comau_ns16arc_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
comau_robots/comau_ns16arc/comau_ns16arc_support/: CMakeLists.txt  package.xml
comau_robots/comau_ns16arc/comau_ns16arc_support/launch/: comau_ns16arc_description.launch  comau_ns16arc_driver.launch  comau_ns16arc_driver_and_rviz.launch
comau_robots/comau_ns16arc/comau_ns16arc_support/meshes/: Link_4.STL  Link_4.dae  Link_5.STL  Link_6.STL  Link_6.dae  base_link.STL
comau_robots/comau_ns16arc/comau_ns16arc_support/urdf/: comau_ns16arc.urdf  comau_ns16arc.xacro  comau_ns16arc_macro.xacro
comau_robots/comau_ns16hand/: README.md
comau_robots/comau_ns16hand/comau_ns16hand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
comau_robots/comau_ns16hand/comau_ns16hand_moveit_plugin/: CMakeLists.txt  comau_ns16hand_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
comau_robots/comau_ns16hand/comau_ns16hand_moveit_plugin/src/: comau_ns16hand_manipulator_ikfast_moveit_plugin.cpp  comau_ns16hand_manipulator_ikfast_solver.cpp
comau_robots/comau_ns16hand/comau_ns16hand_support/: CMakeLists.txt  package.xml
comau_robots/comau_ns16hand/comau_ns16hand_support/launch/: comau_ns16hand_description.launch  comau_ns16hand_driver.launch  comau_ns16hand_driver_and_rviz.launch
comau_robots/comau_ns16hand/comau_ns16hand_support/meshes/: Link_1.STL  Link_1.dae  Link_2.STL  Link_2.dae  Link_3.STL  Link_3.dae  Link_5.dae  base_link.dae
comau_robots/comau_ns16hand/comau_ns16hand_support/urdf/: comau_ns16hand.urdf  comau_ns16hand.xacro  comau_ns16hand_macro.xacro
comau_robots/comau_robot_support_common/: CMakeLists.txt  README.md  package.xml
comau_robots/comau_robot_support_common/launch/: comau_robot_description.launch  comau_robot_driver.launch  comau_robot_driver_and_rviz.launch
(+52 files in other folders)
