<package>
  <name>comau_driver</name>
  <version>0.3.3</version>
  <description>The comau driver package includes nodes for interfacing with a comau
     industrial robot controller.</description>
  <maintainer email="alberto.marini@itia.cnr.it">Alberto Marini</maintainer>
  <license>BSD</license>
  <url type="website"></url>
  <author email="alberto.marini@itia.cnr.it">Alberto Marini</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>simple_message</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>comau_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>industrial_robot_client</build_depend>
  <build_depend>industrial_utils</build_depend>
  <build_depend>roslint</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>simple_message</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>comau_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>industrial_robot_client</run_depend>
  <run_depend>industrial_utils</run_depend>

  <export>
  </export>
</package>
