<?xml version="1.0"?>
<package>
  <name>comau_msgs</name>
  <version>0.0.0</version>
  <description>set of messages to serve as support for comau driver</description>

  <maintainer email="alberto.marini@itia.cnr.it">Alberto Marini</maintainer>

  <license>BSD</license>
  <url type="website"></url>
  <author>Alberto Marini</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/>
  </export>
</package>
